# AIOT_smart_home_for_pets

./: .env.example  .gitignore  README.md  aiot_smart_home_camera_architecture.md  aiot_smart_home_webcam_full_proposal.md  compose.yml  deep-research-report.md  design-qa.md  재료구입신청서 (워크플로우).xlsx  재료구입신청서 7.xlsx
.github/workflows/: ci.yml
.omo/drafts/: petcare-sites-mvp-completion.md
.omo/evidence/: pico-proposal-implementation-slice-code-review.md  webcam-pico-mvp-gate-review.md
.omo/plans/: petcare-sites-mvp-completion.md
backend/: pyproject.toml
backend/app/: __init__.py  agent_client.py  agent_config.py  agent_health.py  agent_lifecycle.py  agent_runtime.py  api.py  bed.py  camera_service.py  clip_contracts.py  clip_delivery.py  clip_outbox.py  clip_upload_queue.py  config.py  contracts.py  dashboard_hub.py  db.py  events.py  jetson_client.py  jetson_contracts.py  main.py  models.py  mqtt_ingest.py  pico_provision.py  rule_ingress.py  rule_worker.py  rules.py  setup.py  vision.py  windows_service.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_clip_trigger_outbox.py
backend/tests/: conftest.py  test_agent_client.py  test_agent_config.py  test_agent_health.py  test_agent_lifecycle.py  test_agent_runtime.py  test_anomalies.py  test_api.py  test_bed.py  test_camera_service.py  test_clip_contracts.py  test_clip_delivery.py  test_clip_outbox.py  test_clip_upload_queue.py  test_contracts.py  test_jetson_client.py  test_jetson_contracts.py  test_jetson_wire_contract.py  test_migrations.py  test_model_smoke.py  test_mqtt_ingest.py  test_pico_provision.py  test_rule_ingress.py  test_rule_worker.py  test_rules.py  test_setup.py  test_vision.py  test_websocket.py  test_windows_service.py
backend/tests/fixtures/: detections.json  vision_sequence.json
backend/tests/integration/: test_jetson_vision_stack.py  test_live_stack.py
contracts/: petcare-agent-wire-v1.json  petcare-jetson-wire-v1.json
dashboard/: .env.example  README.md  package-lock.json  package.json  playwright.config.ts  proxy.ts
dashboard/.openai/: hosting.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: account-deletion.tsx  anomaly-list.tsx  auth-card.tsx  bed-panel.tsx  dashboard.tsx  event-clips.tsx  live-camera.tsx  remote-dashboard.tsx  roi-editor.tsx
dashboard/db/: index.ts  schema.ts
dashboard/drizzle/: 0000_petcare_tenancy.sql  0001_petcare_tunnels_clips.sql
dashboard/e2e/: dashboard.spec.ts  local-setup.spec.ts  roi.spec.ts
dashboard/lib/: api-client.ts  demo-data.ts  petcare-remote.ts  types.ts  use-dashboard.ts
dashboard/remotion/: index.tsx  petcare-hero-loop.test.tsx  petcare-hero-loop.tsx  petcare-promo.test.tsx  petcare-promo.tsx
dashboard/tests/: account-delete.test.ts  account-deletion.test.tsx  api-client.test.ts  (+16 more)
docs/: demo-runbook.md  hardware-acceptance.md  implementation-plan.md  petcare-hardware-wiring-guide.docx  pico-2w-external-power.md  pico-wiring.md  privacy.md  setup.md
firmware/pico_pet_node/: CMakeLists.txt
firmware/pico_pet_node/include/: pet_node.hpp  provisioning.hpp
firmware/pico_pet_node/pico/: CMakeLists.txt  pico_sdk_import.cmake
firmware/pico_pet_node/pico/include/: lwipopts.h  mqtt_publisher.hpp  petcare_config.hpp  petcare_secrets.example.hpp  provisioning_store.hpp  sensors.hpp
firmware/pico_pet_node/pico/src/: main.cpp  mqtt_publisher.cpp  provisioning_store.cpp  sensors.cpp
firmware/pico_pet_node/src/: main.cpp  pet_node.cpp  provisioning.cpp
firmware/pico_pet_node/tests/: test_pet_node_core.cpp  test_provisioning.cpp  test_sensor_schedule.cpp
jetson/: build_engine.sh  clip_writer.py  install.sh  model-manifest.json  petcare-vision.service  protocol.py  tensorrt_yolo.py  vision_node.py
tools/: bootstrap_agent_runtime.ps1  bootstrap_ci.sh  bootstrap_pico_sdk.ps1  bootstrap_services.ps1  bootstrap_toolchain.ps1  build_pico.ps1  build_pico_host.ps1  build_pico_host.sh  check_all.ps1  docs_check.py  e2e_check.py  evidence_manifest.py  jetson_vision_soak.py  pico_contract_check.py  pico_mqtt_smoke.py  platform-manifest.json  privacy_check.py  provision_vision_model.ps1  run_integration.ps1  run_jetson_integration.ps1  secret_sentinel.py  services.ps1  validate_platform_manifest.py
(+138 files in other folders)
